# gaussian_elimination_method

./: README.md
c/: gauss_elim.c
go/: gauss_elim.go  go.mod
rust/: Cargo.toml
rust/gauss_elim/: Cargo.toml
rust/gauss_elim/src/: main.rs
rust/src/: main.rs
