[package]
name = "gauss_elim"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"

[profile.rust_50]
inherits = "dev"
opt-level = 2
debug = true

[profile.rust_500]
inherits = "dev"
opt-level = 2
debug = true

[profile.rust_1000]
inherits = "dev"
opt-level = 2
debug = true

[profile.rust_2000]
inherits = "dev"
opt-level = 2
debug = true
